--- a/views/details.hbs
+++ b/views/details.hbs
@@ -18,6 +18,8 @@
         <p><span>Description:</span> {{description}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
         <a class="btn" href="/">Back</a>
+        <a class="btn" href="/edit/{{_id}}">Edit</a>
+        <a class="btn" href="/delete/{{_id}}">Delete</a>
       </div>
       <h2>Accessories</h2>
       <div class="accessories">
