--- a/views/login.hbs
+++ b/views/login.hbs
@@ -20,6 +20,9 @@
 
           <label for="password">Password</label>
           <input type="password" id="password" name="password">
+          {{#if error}}
+          <span class="error">{{error}}</span>
+          {{/if}}
           <input type="submit" value="Login">
         </form>
       </div>
