--- a/views/details.hbs
+++ b/views/details.hbs
@@ -18,8 +18,10 @@
         <p><span>Description:</span> {{description}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
         <a class="btn" href="/">Back</a>
+        {{#if user}}
         <a class="btn" href="/edit/{{_id}}">Edit</a>
         <a class="btn" href="/delete/{{_id}}">Delete</a>
+        {{/if}}
       </div>
       <h2>Accessories</h2>
       <div class="accessories">
@@ -33,7 +35,9 @@
         <h3 class="italic">This cube has no accessories yet...</h3>
         {{/each}}
       </div>
+      {{#if user}}
       <a class="btn" href="/attach/accessory/{{_id}}">Attach accessory</a>
+      {{/if}}
     </main>
   </div>
   <footer>@Cubicle: Exercise for Express.js and Handlebars</footer>
