--- a/views/details.hbs
+++ b/views/details.hbs
@@ -18,7 +18,7 @@
         <p><span>Description:</span> {{description}}</p>
         <p><span>Difficulty level:</span> {{difficulty}}</p>
         <a class="btn" href="/">Back</a>
-        {{#if user}}
+        {{#if isCreator}}
         <a class="btn" href="/edit/{{_id}}">Edit</a>
         <a class="btn" href="/delete/{{_id}}">Delete</a>
         {{/if}}
@@ -35,7 +35,7 @@
         <h3 class="italic">This cube has no accessories yet...</h3>
         {{/each}}
       </div>
-      {{#if user}}
+      {{#if isCreator}}
       <a class="btn" href="/attach/accessory/{{_id}}">Attach accessory</a>
       {{/if}}
     </main>
